# zama-monorepo

./: .gitignore  ReadMe.md
concrete-numpy/fhe-db/: Dockerfile  docker-compose.yml
concrete-numpy/fhe-db/notebooks/: keyvaluestore.ipynb
scripts/: shortint-genkeys.js
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
server/src/api/: routes.rs
server/src/middleware/: cors.rs
server/src/models/: tfhe.rs
tfhe-rs/: .gitignore  Cargo.toml
tfhe-rs/src/: booltest.rs  keygen.rs  keygenjson.rs  main.rs  readfile.rs  shortinttest.rs
tfhe-ui/: app.vue  nuxt.config.ts  package.json
tfhe-ui/composables/: useEncodeArray.ts  useRevertString.ts
tfhe-ui/public/tfhe-wasm/: tfhe.d.ts  tfhe.js  tfhe_bg.wasm  tfhe_bg.wasm.d.ts
tfhe-ui/server/api/: decrypt.ts  encrypt.ts  keygen.ts  serverkey.ts
tfhe-ui/server/api/operations/: add.ts
tfhe-ui/store/keys/: keys.index.ts  keys.types.ts
tfhe-ui/types/: tfhe.ts
