[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_cors = "0.5.1"
tfhe = { version = "0.1.11", features = [ "boolean", "shortint", "aarch64-unix" ] }